# ai-scraper

./: .deployment-trigger  .env.example  .env.test.example  .gitignore  API_ANALYSIS_REPORT.md  BRUNO_JWT_VERIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  JWT_API_INTEGRATION_SUMMARY.md  JWT_INTEGRATION_GUIDE.md  README.md  alembic.ini  debug-deployment.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  enhanced-api-test.sh  generate-jwt-key.sh  generate-secrets.sh  health-check.sh  linode-setup.sh  manual-jwt-registration.sh  production-jwt-setup.sh  pyproject.toml  requirements.txt  setup-ssl-enhanced.sh  setup-ssl.sh  test-api-endpoints.sh  test-bruno-jwt-collection.sh  test-nginx-config.sh  test-stock-workflow.sh  test_rate_validation.sh  test_smart_antidetection.sh  test_streamlined_workflow.sh  trigger-jwt-deployment.sh  validate-deployment.sh
.github/workflows/: deploy.yml  stock_price_alert.yml  usd_rate_email.yml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: admin.py  health.py  scraping.py
app/core/: __init__.py  cache.py  config.py  database.py  database_types.py  redis.py
app/crud/: job.py
app/models/: __init__.py  api_key.py  job.py  result.py
app/schemas/: __init__.py  scraping.py
app/services/: cache.py  queue.py  scraper.py
app/worker/: scraper_worker.py
bruno-collection/: README.md  bruno.json
bruno-collection/Admin/: Admin Metrics.bru  Admin Statistics.bru  Cleanup Old Jobs.bru  Queue Status.bru
bruno-collection/Examples/: Debug API Key Status.bru  Deployment Troubleshooting Steps.bru  Manual JWT Registration Guide.bru  Scrape with CSS Selector.bru  Scrape with Screenshot.bru  Test Authentication.bru
bruno-collection/Health/: Health Check.bru  Liveness Probe.bru  Readiness Probe.bru
bruno-collection/Scraping/: Cancel Job.bru  Get Job Status.bru  List Recent Results.bru  Submit Scraping Job.bru
bruno-collection/System/: API Documentation.bru  OpenAPI Schema.bru  Root Endpoint.bru
bruno-collection/environments/: Local.bru  Production.bru
client/: README.md  check_rate.sh  demo.sh  email_config_example.json  example_usage.py  get_stock_prices.sh  get_usd_rate.sh  stock_price_fetcher.py  usd_rate_scraper.py
docker/: Dockerfile.api  Dockerfile.locust  Dockerfile.test  Dockerfile.test-worker  Dockerfile.worker  init-prod.sql  init.sql  prometheus.yml  redis-prod.conf  redis.conf
docker/nginx/: nginx.conf
docs/: GITHUB_ACTIONS_API.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: check_db.py  cleanup_enum.py  create-api-key.py  create-jwt-api-key.py  deploy.sh  health_check.py  init_production_db.py  reset_schema.py  test-jwt-api-key.sh  test-workflows-jwt.sh  test_schema.py
tests/: __init__.py  conftest.py  manual_test.py  test_api.py
tests/fixtures/: factories.py
tests/integration/: test_api_endpoints.py
tests/load/: test_api.py
tests/unit/core/: test_config.py
tests/unit/models/: test_job.py
tests/unit/schemas/: test_scraping.py
